# CRelections

./: Cargo.toml  README.md
src/: lib.rs  main.rs  server.rs
src/citivas/: Entity.rs  dist_el_gamal.rs  election.rs  encryption_schemes.rs  entity.rs  integration_test.rs  mix_network.rs  mod.rs  primitives.rs  registrar.rs  superviser.rs  supervisor.rs  tellers.rs  temp.rs  test_election.rs  test_encryption_schemes.rs  test_primitives.rs  test_tellers.rs  test_voter.rs  test_zkproofs.rs  toy_functions.rs  voter.rs  zkproofs.rs
static/: index.html
