[package]
name = "CRelections"
version = "0.1.0"
authors = ["Doron Zarchy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#curv = { git = "https://github.com/doronz2/curv-1" , tag = "v0.2.7"}
curv = {git  = "https://github.com/ZenGo-X/curv", tag = "v0.2.3"}
elgamal = {git = "https://github.com/ZenGo-X/rust-elgamal"}
vice-city = {git = "https://github.com/ZenGo-X/vice-city"}